# Guidewire

./: .gitignore  README.md  pyproject.toml  ruff.toml
docs/: target-app-coverage.md
src/guidewire/: __init__.py  __main__.py  errors.py  privacy.py  refs.py  safety.py  server.py
src/guidewire/backends/: __init__.py  _xlib_focus.py  base.py  linux.py  mock.py  normalize.py  types.py  windows.py
src/guidewire/models/: __init__.py  mappings.py
src/guidewire/tools/: __init__.py  click.py  clipboard_read.py  clipboard_write.py  find.py  focus_window.py  get_table_info.py  get_text.py  get_tree_info.py  list_windows.py  manage_window.py  press_key.py  scroll_to_item.py  snapshot.py  type_text.py
tests/: conftest.py  test_agent_harness.py  test_backend_abc.py  test_backend_normalize.py  test_click_tool.py  test_clipboard_integration.py  test_clipboard_read_tool.py  test_clipboard_write_tool.py  test_errors.py  test_find_tool.py  test_focus_window_tool.py  test_get_table_info_tool.py  test_get_text_tool.py  test_get_tree_info_tool.py  test_golden_snapshots.py  test_linux_backend.py  test_linux_golden_snapshots.py  test_linux_integration.py  test_linux_normalization.py  test_list_windows.py  test_manage_window_tool.py  test_mock_backend.py  test_normalize.py  test_press_key_tool.py  test_privacy.py  test_refs.py  test_safety.py  test_scroll_to_item_tool.py  test_server.py  test_shared_core_integration.py  test_snapshot_tool.py  test_stdio_transport.py  test_tool_layer_validation.py  test_tools_registry.py  test_type_text_tool.py  test_types.py  test_version.py  test_windows_backend.py  test_windows_element_interaction.py  test_windows_focus_window.py  (+2 more)
tests/fixtures/: __init__.py  capture_linux_snapshots.py  capture_windows_snapshots.py  helpers.py
tests/fixtures/linux/: gedit_snapshot.json  gnome_calculator_snapshot.json  nautilus_snapshot.json
tests/fixtures/windows/: calculator_snapshot.json  file_explorer_snapshot.json  notepad_snapshot.json  settings_snapshot.json
tests/harness/: __init__.py  agent.py  assertions.py  server.py
tests/integration/: __init__.py  conftest.py  test_agent_client.py  test_agent_clipboard_cross_app.py  test_agent_replay.py  test_e2e_smoke.py  test_linux_agent_cross_app.py  test_linux_agent_gedit.py  test_linux_agent_nautilus.py  test_server_process.py  test_server_robustness.py  test_windows_agent_cross_app.py  test_windows_agent_file_explorer.py  test_windows_agent_notepad.py  test_windows_agent_settings.py
tests/models/: test_element.py  test_mappings.py
